<resources>
    <string name="app_name">Database</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="login">Login</string>
    <string name="registrieren">Zur Registrierung</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">registrieren</string>
    <string name="to_login">Zum Login</string>
</resources>